public/css/fightencyclopediacss.css
:root {
    --page-background-color: white;
    --content-background-color: white; /*#e0dbdb*//*#fdfdfd*//*#f3f3f3*/
    --main-font-color: rgb(42, 42, 42);/*#0c0c0c;*/
    --links-font-color: #12343b; 
    --image-shadow-settings: 0 0 6px 3px #141414;
    --image-filter-settings: grayscale(50%);
    --scrollbar-width-setting: thin;
    --scrollbar-color-setting: rgb(164, 164, 165) rgb(202, 202, 202);
    --tab-unclicked-color:#f6f6f6;
    --bottom-border-color:rgb(219, 219, 219);
    --bottom-border-type:inset;
    --bottom-border-size:1px;
    --menu-color:#fdfdfd;
}
body {
    color: var(--main-font-color);
    text-align: center;
    background-size: 100%;
    background-color: var(--page-background-color);
    font-family: "Raleway";/*Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"Playfair Display";*/
    margin: 0 auto;
    font-size:14px;
}
div a:hover,a:hover,a p:hover,.header a:hover, .header p a:hover, .nextpreviousbutton:hover, .cataloguelink a, 
.cataloguebutton:hover,.cataloguelink a:visited:hover{
    color:#52a7bd;
}
.cataloguebutton, .expandpanelbutton, .nextpreviousbutton, .linktofightercataloguetable, .filtermenu li, 
.filterweightmenu li, .filtergendermenu li, .pagename, .tab1, .tab2, .tab3, .toFighterLink,
.cataloguepagebuttons a, .searchresultsgridchildimg, .searchresultsparagraph{
    cursor: pointer;
}
.tab1 a:hover, .tab2 a:hover, .tab3 a:hover{
    color:#9e9e9e;
}
#FightsCount, #BoxersCount{
    font-weight: bold;
}
.widescreenmenubar, .linkstopages, .mobilebar, .popupmenu, .featuredfightersspace p,.featuredfightsspace h2, 
.tab1, .tab2, .tab3, .fighterinfonamespace {
    font-family:"Montserrat";
}
.featuredfightersspaceone p, .featuredfightsspaceone p{
    font-size:16px;
}
.featuredfightersspace span{
    text-align:left;
}
.loadinggifspace{
    margin:0 auto;
    width:100%;
}
.loadinggifspace img{
    height:50px;
    width:50px;
}
.onetitle{
    text-align:left; 
    margin-left:2.5%;
    border-bottom:var(--bottom-border-size) var(--bottom-border-type) var(--bottom-border-color);
    padding-bottom:5px;
}
.onetitle p{
    font-size:16px;
}
.onetitle span, .countspan{
    font-size:12px;
}
.expandpanelbutton{
    margin:0 auto;
    background: none;
    border:none;
    margin-left:100px;
    font-size:16px;
    color:black;
    float:right;
}
.menuoptionlogo{
    height:20px;
    width:20px;
    margin-left:-5px;
    margin-top:-25px;
}
.errordiv{
    width: 63%;
    background-color: var(--content-background-color); 
    height:150px;
    margin: 0 auto;
    border-radius:5px;
    color:#CE2029;
}
.errorpagemessage{
    grid-column: 1/8;
    grid-row:4/7;
    color:#CE2029;
    background-color: var(--content-background-color); 
}
.errorpagemessage img{
    height:150px;
    width:200px;
}
.errorpagesearch{
    color:black;
}
.errorpagesearchtools{
    margin-top:-5%;
}
.errorpagesearchtools input{
    margin-top:10px;
}
    .errorpagesearchtools button{
        background:none;
        border:none;
        color: var(--links-font-color);
    }
.errorpagelinks{
    text-align: center;
}    
    .errorpagelinks a{
        color: var(--links-font-color);
        padding:5%;
    }    
    .errorpagelinks a:visited{
        color: var(--links-font-color);
    }    
.searchspacegrid{
    background-color: var(--content-background-color); 
    grid-column: 1/8;
    grid-row:1;
    height:165px;   
    display:grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows:45px;
}

.searchspacesearchtools input{
    margin-top:5px;
    width:65%;
    border: var(--bottom-border-size) var(--bottom-border-type) var(--bottom-border-color);
}
.searchspacesearchtools button{
    background: none;
    border: none;
    color: var(--links-font-color);
}
.searchspacesearchtools{
    grid-column: 1/8;
    grid-row:2;
}
.searchspacemessage{
    grid-column: 1/8;
    grid-row:3;
}
#SearchTerm{
    font-weight:bold;
}
.searchresultsgrid{
    margin-top:15px;
    grid-column: 2/7;
    display:grid;
    grid-auto-columns: auto;
    grid-auto-rows: auto;
    background-color: var(--content-background-color);  
}
.searchresultsgrid a{
    color: var(--links-font-color);
    text-decoration: none;
}
.searchresultsgridchild{
    border-bottom:var(--bottom-border-size) var(--bottom-border-type) var(--bottom-border-color);
    color:var(--links-font-color);
}
.searchresultsgridchildimg img{
    height:110px;
    width:110px;
    margin-top:10px;
    -webkit-filter: var(--image-filter-settings);
    filter: var(--image-filter-settings);
    -webkit-box-shadow: var(--image-shadow-settings);
    box-shadow: var(--image-shadow-settings);
}
.mobilebar{
    top:0;
    width:100%;
    height:30px;
    border-bottom: var(--bottom-border-size) var(--bottom-border-type) var(--bottom-border-color);
    background-color: var(--menu-color);
    position:fixed;
    z-index: 6;
}
.mobilebarlogo{
    height:30px;
    width:90px;
    float:left;
}
.mobilebar input{
    margin:0 auto;
    margin-top:5px;
}
.mobilebar button{
    margin:0 auto;
    margin-top:6px;
    background: none;
    border: none;
    color: var(--links-font-color);
}
.mobiletitle{
    font-size:18px;
}
.menubutton{
    float:left;
    font-size:22px;
}
#backgroundwrapper {
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100%;
    object-fit:cover;
}
#content {
    margin-top:50px;
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr;
    grid-template-columns: repeat(7, 1fr);
    -ms-grid-rows: minmax(150px, auto) 10px minmax(150px, auto) 10px minmax(150px, auto) 10px minmax(150px, auto) 10px minmax(150px, auto) 10px minmax(150px, auto);
    grid-template-rows: repeat(25, minmax(15px, auto));
    grid-gap: 2px;
}
.polaroid {
    border: none;
}
.quotesspace{
    grid-column: 1/9;
    grid-row: 18;
    border-top:var(--bottom-border-size) outset var(--bottom-border-color);
}
/* ... */

